Explain Isotropic Sqw normalization
git-svn-id: https://svn.mccode.org/svn/McStasTeX@112 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/ISISdoc.tex
+++ b/trunk/ISISdoc.tex
@@ -1,4 +1,4 @@
-\section{ISIS\_moderator: A general continuous source}
+\section{ISIS\_moderator: ISIS pulsed moderators}
 \label{isis-moderator}
 \index{Sources!ISIS pulsed moderators}
 
