--- a/trunk/moderator.tex
+++ b/trunk/moderator.tex
@@ -1,4 +1,4 @@
-\section{Moderator: A time-of-flight source}
+\section{Moderator: A time-of-flight source (pulsed)}
 \label{s:moderator}
 \index{Sources!Time of flight pulsed moderator}
 
@@ -7,12 +7,12 @@
 The simple time-of-flight source component {\bf Moderator} resembles
 the source component {\bf Source\_simple} described in \ref{source-simple}.
 {\bf Moderator} is circular with radius $r_s$ and focuses
-on a rectangular target of area $w \times h$ in a distance $z_f$. 
+on a rectangular target of area $w \times h$ in a distance $z_f$.
 The initial velocity is chosen
 with a linear distribution within an interval, defined by the
 minimum and maximum energies, $E_0$ and $E_1$, respectively.
 
-The initial time of the neutron is determined on basis of a 
+The initial time of the neutron is determined on basis of a
 simple heuristical model for the time dependence of the
 neutron intensity from a time-of-flight source.
 For all neutron energies, the flux decay is assumed to be exponential,
