--- a/trunk/misc.tex
+++ b/trunk/misc.tex
@@ -15,7 +15,7 @@ The components for doing this trick is {\bf Virtual\_input} and
 {\bf Virtual\_output}, which stores and reads neutron rays, respectively.
 
 Other components perform the simulation of the instrument
-resolution functions. These are {\bf Res\_sample} and {\bf TOF\_Res\_sample}, 
+resolution functions. These are {\bf Res\_sample} and {\bf TOF\_Res\_sample},
 which are to be
 placed at the sample position, and {\bf Res\_monitor}, that should
 be localized at the position of the instrument detector.
@@ -45,17 +45,25 @@ status, but assumes the form of a component.
 \index{Simulation progress bar}
 
 This component displays the simulation progress and status
-but does not affect the neutron parameters. 
+but does not affect the neutron parameters.
 The display is updated in regular intervals of the full simulation;
-the default step size is 10 \%, but it may be changed using 
-the \verb+percent+ parameter (from 0 to 100). 
-The estimated computation time is displayed at the begining 
+the default step size is 10 \%, but it may be changed using
+the \verb+percent+ parameter (from 0 to 100).
+The estimated computation time is displayed at the begining
 and actual simulation time is shown at the end.
 
-Additionally, setting the \verb+flag_save+ to 1 results in 
-a regular save of the data files during the simulation. 
-This means that is is possible to view the data before the end 
-of the computation, and have also a trace of it in case of 
-computer crash. The advancement level is stored in these temporary 
-data files. Technically, this save is equivalent to sending regularly 
+Additionally, setting the \verb+flag_save+ to 1 results in
+a regular save of the data files during the simulation.
+This means that is is possible to view the data before the end
+of the computation, and have also a trace of it in case of
+computer crash. The advancement level is stored in these temporary
+data files. Technically, this save is equivalent to sending regularly
 a USR2 signal to the running simulation.
+
+\section{Beam\_spy: A beam analyzer}
+\component{Beam\_spy}{System}{}{}{should overlap previous component}
+\index{Monitors!Beam analyzer}
+
+This component is at the same time an Arm and a simple Monitor. It analyzes all neutrons reaching it, and computes statistics for the beam, as well as the intensity.
+
+This component does not affect the neutron beam, and does not contain any propagation call. Thus it gets neutrons from the previous component in the instrument description, and should better be placed at the same position, with \verb+AT (0,0,0) RELATIVE PREVIOUS+.
