Minor stuff corrected according to Kim's list of remarks.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@113 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/guide.tex
+++ b/trunk/guide.tex
@@ -261,8 +261,9 @@ producing a 2D array ($k, k_h$) on smaller guide channels.
 Waviness effects, supposed to be randomly distributed
 (\emph{i.e.} non-periodic waviness)
 can be specified globally, or for each part of the guide section.
-Additionally, chamfers (originating from the substrate manufacturing)
+Additionally, chamfers
 may be defined the same way.
+Chamfers originate from the substrate manufacturing, so that operators do not harm themselves with cutting edges./ Usual dimensions are about tens of millimeters. They are treated as absorbing edges around guide plates, both on the input and output surfaces, but also aside each mirror.
 
 The straight section of length $l$ may be divided into $n$ bits of same length
 within which chamfers are taken into account.
