--- a/trunk/misc.tex
+++ b/trunk/misc.tex
@@ -56,7 +56,7 @@ Additionally, setting the \verb+flag_save+ to 1 results in
 a regular save of the data files during the simulation.
 This means that is is possible to view the data before the end
 of the computation, and have also a trace of it in case of
-computer crash. The advancement level is stored in these temporary
+computer crash. The achieved percentage of the simulation is stored in these temporary
 data files. Technically, this save is equivalent to sending regularly
 a USR2 signal to the running simulation.
 
