--- a/trunk/Source_Optimizer.tex
+++ b/trunk/Source_Optimizer.tex
@@ -123,10 +123,11 @@ The default configuration (equivalent to {\it options} = "") is
 \begin{center}
 \begin{tabular}{rcl}
   {\it options} & = & "{\it continuous} optimization,
-  {\it auto} setting, {\it keep} = 10, {\it bins} = 10, \\
+  {\it auto} setting, {\it keep} = 0.1, {\it bins} = 0.1, \\
   & & {\it smooth} spikes, SetXY+SetDivV+SetDivS".
 \end{tabular}
 \end{center}
+Parameters keep and step should be between 0 and 1.
 Additionally, you may restrict the optimization to only some of the neutron parameters, using the {\it SetXY, SetV, SetS, SetDivV, SetDivS} keywords.
 The keyword modifiers {\it no} or {\it not} revert the next option.
 Other options not shown here are:
@@ -140,6 +141,6 @@ the optimization. If no name is given the component name will be used,
 and a '.src' extension will be added. By default, no file is generated.
 The file format is in a McStas 2D record style.
 
-As an alternative, you may use the Source\_adapt component 
-(see section \ref{s:source-adapt}) which performs 
+As an alternative, you may use the Source\_adapt component
+(see section \ref{s:source-adapt}) which performs
 a 3D phase-space optimization.
