--- a/trunk/kernelcalls.tex
+++ b/trunk/kernelcalls.tex
@@ -13,8 +13,8 @@ the \verb+MCSTAS+ library. \index{Library!Components!share}
 \index{Environment variable!MCSTAS}
 
 Within these functions, the 'Run-time' part is available for all
-component/instrument descriptions. The other parts 
-% (see table~\ref{t:comp-share}) 
+component/instrument descriptions. The other parts
+% (see table~\ref{t:comp-share})
 are dynamic, that is they are not
 pre-loaded, but only imported once when a component requests it
 using the \verb+%include+ \MCS\ keyword. For instance, within a
@@ -31,10 +31,10 @@ Similarly,
 \end{verbatim}
 will \emph{only} include the 'read\_table-lib.h'.
 The library embedding is done only once for all components (like the
- SHARE section). \index{Keyword!SHARE} For an example 
-of implementation, see ´{\bf Res\_monitor}.
+ SHARE section). \index{Keyword!SHARE} For an example
+of implementation, see {\bf Res\_monitor}.
 
-In this Appendix, we present a short list of both each of the library contents 
+In this Appendix, we present a short list of both each of the library contents
 and the run-time features.
 
 \section{Run-time calls and functions (\texttt{mcstas-r})}
@@ -82,7 +82,7 @@ the neutron rays which have negative propagation times are removed automatically
   It should be used e.g
   to indicate that a component has interacted with the neutron ray
   (e.g. scattered or detected).
-  This does not affect the simulation (see, however, {\bf Beamstop}), 
+  This does not affect the simulation (see, however, {\bf Beamstop}),
   and it is mainly used by the
   \verb+MCDISPLAY+ section and the \verb+GROUP+ modifier
 %(see~\ref{s:trace} and \ref{s:comp-mcdisplay}).
@@ -116,7 +116,7 @@ the neutron rays which have negative propagation times are removed automatically
   the previous component, respectively). A
   component of a rotation matrix is referred to as
   ROT\_A\_CURRENT\_COMP$[m][n]$, where $m$ and
-  $n$ are 0, 1, or 2.
+  $n$ are 0, 1, or 2 standing for $x,y$ and $z$ coordinates respectively.
 \item {\bf POS\_A\_COMP}$(comp)$ gives the absolute position
   of the component with the name {\em comp}. Note that
   {\em comp} is not given as a string. A component of the
@@ -210,6 +210,7 @@ resulting Coord structure.
 \end{itemize}
 
 \subsection{Output from detectors}
+Details about using these functions are given in the \MCS\ User Manual.
 \begin{itemize}
 \item {\bf DETECTOR\_OUT\_0D}$(...)$. Used to output the results from a
   single detector. The name of the detector is output together
@@ -308,15 +309,15 @@ Available functions to read \emph{a single} vector/matrix are:
   Table structure. Use $rows=columns=0$ not to allocate memory.
   Calls to Table\_Init are optional, since initialization is being
   performed by other functions already.
-\item {\bf Table\_Read}(\&$Table$, $filename$, $block$) 
-  reads numerical block number 
-  $block$ (0 to catenate all) data from \emph{text} file $filename$ into $Table$, 
-  which is as well initialized in the process. 
-  The block number changes when the numerical data changes its size, 
-  or a comment is encoutered (lines starting 
-  by '\verb+# ; % /+'). If the data could not be read, 
-  then $Table.data$ is NULL and $Table.rows = 0$. 
-  You may then try to read it using Table\_Read\_Offset\_Binary. 
+\item {\bf Table\_Read}(\&$Table$, $filename$, $block$)
+  reads numerical block number
+  $block$ (0 to catenate all) data from \emph{text} file $filename$ into $Table$,
+  which is as well initialized in the process.
+  The block number changes when the numerical data changes its size,
+  or a comment is encoutered (lines starting
+  by '\verb+# ; % /+'). If the data could not be read,
+  then $Table.data$ is NULL and $Table.rows = 0$.
+  You may then try to read it using Table\_Read\_Offset\_Binary.
   Return value is the number of elements read.
 \item {\bf Table\_Read\_Offset}(\&$Table$, $filename$, $block$, \&\textit{offset}, $n_{rows}$)
   does the same as Table\_Read except that it starts at offset \textit{offset}
@@ -329,12 +330,12 @@ Available functions to read \emph{a single} vector/matrix are:
   be "float" or "double"), the number $n_{rows}$ of rows to read, each
   of them having $n_{columns}$ elements. No text header should be present
   in the file.
-\item {\bf Table\_Rebin}(\&$Table$) rebins $Table$ rows with increasing, evenly spaced first column (index 0), e.g. before using Table\_Value.
+\item {\bf Table\_Rebin}(\&$Table$) rebins all $Table$ rows with increasing, evenly spaced first column (index 0), e.g. before using Table\_Value. Linear interpolation is performed for all other columns. The number of bins for the rebinned table is determined from the smallest first column step.
 \item {\bf Table\_Info}$(Table)$ print information about the table $Table$.
 \item {\bf Table\_Index}($Table, m, n$) reads the $Table[m][n]$ element.
 \item {\bf Table\_Value}($Table, x, n$) looks for the closest $x$
   value in the first column (index 0), and extracts in this row the
-  $n$-th element (starting from 0). The first column is thus the 'x' axis for the data.
+  $n$-th element (starting from 0). The first column is thus the 'x' axis for the data. It does not contain any interpolation method.
 \item {\bf Table\_Free}(\&$Table$) free allocated memory blocks.
 \end{itemize}
 
