Fresh ISBN's and a new Risoe-R- number for the Component manual. Awaiting confirmation about ISSN's.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@114 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/datablad.tex
+++ b/trunk/datablad.tex
@@ -59,7 +59,7 @@ Telefax +45 4677 4013
 \titel{User and Programmers Guide to the Neutron Ray-Tracing Package
  \MCS , Version 1.9}
 \forfatter{Peter Kj\ae r Willendrup, Emmanuel Farhi, Klaus Lieutenant, Kim Lefmann, and Kristian Nielsen}
-\isbn{87--550--2929--9; 87--550--2930--2 (Internet)}\issn{0106--2840}
+\isbn{ISBN 87--550--3481--0 (Internet)}\issn{0106--2840}
 \afdeling{Materials Research Department}
 \dato{\reldate}
 \regnummer{---}
