--- a/trunk/datablad_comp.tex
+++ b/trunk/datablad_comp.tex
@@ -52,7 +52,7 @@ Telefax +45 4677 4013
 \titel{Component Manual to the Neutron Ray-Tracing Package
  \MCS , Version \version}
 \forfatter{Kim Lefmann, Peter Kj\ae r Willendrup, Kristian Nielsen, Emmanuel Farhi, Klaus Lieutenant}
-\isbn{87--550--2929--9; 87--550--2930--2 (Internet)}\issn{0106--2840}
+\isbn{ISBN 87--550--3482--92 (Internet)}\issn{0106--2840}
 \afdeling{Materials Research Department}
 \dato{\reldate}
 \regnummer{---}
