--- a/trunk/risoe-rep_comp-title.tex
+++ b/trunk/risoe-rep_comp-title.tex
@@ -27,7 +27,12 @@
  \par\noindent\mbox{\includegraphics[width=0.27\textwidth]{figures/risoe-logo.eps}} \par
  \vskip 1.5cm
  {\twfvbf \noindent \@title \par} \vskip 20dd \baselineskip 16dd
- {\frtnbf\noindent\@author \par} \par \vfill \baselineskip 12dd
+ {\frtnbf\noindent\@author \par} 
+ \vskip 0.5cm
+ \begin{center}
+     \includegraphics[width=\textwidth]{figures/sqw.eps}
+   \end{center}
+   \par \vfill \baselineskip 12dd
  \frtnbf\noindent Ris{\o} National Laboratory, Roskilde, Denmark \par
  \vskip 4dd \noindent\ifcase\month\or
  January\or February\or March\or April\or May\or June\or
@@ -35,11 +40,11 @@
  \space\number\year }
 
 \let\reportlan=\relax
-\def\month{10}                   % Released in October 2005
+\def\month{11}                   % Released in November 2005
 % Need to match front page line breaking.
 \title{Component~Manual~for~\rlap{the}\\ % Avoid overfull message.
  Neutron~Ray-Tracing~Package\\
- \MCS,\\ Version \version\ }
+ \MCS, Version \version\ }
 \author{Kim Lefmann, Peter Kj\ae r Willendrup, Kristian Nielsen,
 Emmanuel Farhi, and Klaus Lieutenant}
 \maketitle
